goods 模块设置 feign 简单调用

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ LeYou_gatway/target/
 LeYou_gatway/src/test
 LeYou_registry/target/
 LeYou_registry/src/test
+LeYou_Goods/target/
+LeYou_Goods/src/test
