添加其他模块

--- a/LeYou_gatway/src/main/resources/application.yml
+++ b/LeYou_gatway/src/main/resources/application.yml
@@ -13,8 +13,11 @@ eureka:
     ip-address: 127.0.0.1
     instance-id: ${spring.application.name}:${server.port}
 zuul:
-  prefix: /api # 添加路由前缀
-  retryable: true
+  routes:
+    leyouGoods:
+      path: /goods/**
+      url: leyou-goods
+  prefix: /api
 ribbon:
   ConnectTimeout: 250 # 连接超时时间(ms)
   ReadTimeout: 2000 # 通信超时时间(ms)
@@ -27,4 +30,4 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMillisecond: 10000 # 熔断超时时长：10000ms
+            timeoutInMillisecond: 10000 # 熔断超时时长：10000m
